# rrsmr-ads-public

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: pull-request-template.md
config/: paths.yaml  scenarios.yaml  smr_assumptions.csv  source_data_bundle.json
scripts/: audit_reproducible_outputs.py  prepare_source_inputs.py  process_genmix.py  restore_objective1_preprocessing_inputs.sh  run_complete_model.sh  run_objective1_generation.sh  run_objective2_demand.sh  run_objective3_final_qa.sh  run_objective3_integration.sh  run_objective3_smr_fleet.sh  run_objective3_system_impact.sh  run_preprocessing.sh  validate_dataset.py
src/: task1_prep_and_calibration.py  task2_ml_training.py  task3_baseline_and_weather_scaffold.py  task4_weather_adjustment.py  task5_fes_anchoring_and_export.py
tests/: test_complete_model_runner.py  test_current_reproducibility_guide.py  test_dashboard_objective3.py  test_objective1_objective3_path_alignment.py  test_objective1_runner_script.py  test_objective1_runtime_validation.py  test_objective1_static_contract.py  test_objective2_runner_script.py  test_objective2_static_contract.py  test_objective3_migration_completeness.py  test_objective3_missing_source_inventory.py  test_objective3_owner3_integration_runner.py  test_objective3_owner3_migration.py  test_objective3_owner3_parquet_engine.py  test_objective3_owner3_repo_root_resolution.py  test_objective3_owner3_smr_schema_compatibility.py  test_objective3_owner4_summary_evidence.py  test_objective3_owner5_final_qa_runner.py  test_preprocessing_runner.py  (+9 more)
(+108 files in other folders)
